--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   "dependencies": {
     "@headlessui/react": "^1.5.0",
     "@reduxjs/toolkit": "^1.8.1",
+    "@types/react-image-gallery": "^1.0.5",
     "@types/react-redux": "^7.1.24",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-image-gallery": "^1.2.7",
     "react-query": "4.0.0-beta.2",
     "react-redux": "^8.0.1"
   },
